# tm_mapselect

./: README.md  pyproject.toml
tm_mapselect/: gbxremote.py  main.py  tmcolors.py
tm_mapselect/templates/: index.html
