[project]
name = "tm_mapselect"
version = "0.1.0"
description = "Web admin board for Trackmania map selection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
]

[project.scripts]
tm_mapselect = "tm_mapselect.main:main"

[tool.uv_build]
include = ["tm_mapselect/templates/index.html"]

[tool.uv.build-backend]
module-root = ''

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
